--- a/biblioteca-spring/src/main/resources/templates/autor/create_autor.html
+++ b/biblioteca-spring/src/main/resources/templates/autor/create_autor.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Crear Autor</title>
-    <!-- Agregar enlaces a Bootstrap CSS y JavaScript -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-</head>
+<html lang="es">
+<head th:replace="fragments/head" />
 <body>
     <div class="container">
         <h1>Crear Autor</h1>
-
-        <form action="#" th:action="@{/save}" th:object="${author}" method="post">
+		
+        <form action="#" th:action="@{/autor/save}" th:object="${author}" method="post">
             <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre:</label>
                 <input th:field="*{nombre}" type="text" class="form-control" id="nombre" name="nombre" required>
