--- a/biblioteca-spring/src/main/resources/templates/user/login.html
+++ b/biblioteca-spring/src/main/resources/templates/user/login.html
@@ -4,41 +4,29 @@
 <body>
 	<nav th:replace="fragments/nav" />
 	<div class="container">
-		<h2 th:text="#{login.message}"></h2>
+		<h2>Inicio de sesión</h2>
 		<form class="form-horizontal" method="post" action="/login">
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="username" th:text="#{login.id}"></label>
+				<label class="control-label col-sm-2" for="username">Email</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="username" name="username" placeholder="12345678A" maxlength="70" required/>
+					<input type="text" class="form-control" id="username" name="email" placeholder="12345678A" maxlength="70" required/>
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="password" th:text="#{login.password}"></label>
+				<label class="control-label col-sm-2" for="password">Password</label>
 				<div class="col-sm-10">
 					<input type="password" class="form-control" id="password" name="password" maxlength="70" required/>
 				</div>
 			</div>
-			<div class="alert alert-danger" role="alert" th:text="#{login.failure}"
-				th:if="${loginFailure}"></div>
-			<div class="alert alert-danger" role="alert" th:text="#{login.verify.failure}"
-				th:if="${verificationFailure}"></div>
-			<div class="alert alert-success" role="alert" th:text="#{login.verify.success}"
-				th:if="${verificationSuccess}"></div>
-			<div class="alert alert-success" role="alert"
-					th:if="${resetPasswordSendEmail}" th:text="#{login.resetPassword.messageSent}"></div>
-			<div class="alert alert-danger" role="alert"
-					th:if="${tokenNotValid}" th:text="#{login.resetPassword.tokenNotValid}"></div>
-			<div class="alert alert-success" role="alert"
-					th:if="${passwordChanged}" th:text="#{login.resetPassword.success}"></div>
+			<div class="alert alert-danger" role="alert" th:if="${loginFailure}">Ha habido un error</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary" th:text="#{login.enter}"></button>
+					<button type="submit" class="btn btn-primary">Acceder</button>
 				</div>
 			</div>
 			<input type="hidden" th:name="${_csrf.parameterName}"
 				th:value="${_csrf.token}" />
 		</form>
-		<a href="#resetPasswordModel" data-toggle="modal" data-target="#resetPasswordModel" th:text="#{login.resetPassword}"></a>
 	</div>
 		
 	<footer th:replace="fragments/footer" />
