--- a/biblioteca-spring/src/main/resources/templates/fragments/head.html
+++ b/biblioteca-spring/src/main/resources/templates/fragments/head.html
@@ -2,6 +2,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Biblioteca Capgemini</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/custom.css" />
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+	<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>	
 </head>
