--- a/biblioteca-spring/src/main/resources/templates/admin/add.html
+++ b/biblioteca-spring/src/main/resources/templates/admin/add.html
@@ -12,7 +12,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="email">Email</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="email" name="email" placeholder="manolito@gmail.com"
+					<input type="email" class="form-control" id="email" name="email" placeholder="manolito@gmail.com"
 						maxlength="255" required />
 					<span class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
 				</div>
