--- a/biblioteca-spring/src/main/resources/templates/user/home.html
+++ b/biblioteca-spring/src/main/resources/templates/user/home.html
@@ -4,7 +4,7 @@
 <head th:replace="fragments/head" />
 
 <body>
-	<nav th:replace="fragments/nav" />
+	<!--<nav th:replace="fragments/nav" />-->
 	<h1>PAGINA HOME</h1>
 	<footer th:replace="fragments/footer" />
 </body>
