--- a/biblioteca-spring/src/main/resources/templates/user/login.html
+++ b/biblioteca-spring/src/main/resources/templates/user/login.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head th:replace="fragments/head" />
 <body>
-	<nav th:replace="fragments/nav" />
+	<!--<nav th:replace="fragments/nav" />-->
 	<div class="container">
 		<h2>Inicio de sesión</h2>
 		<form class="form-horizontal" method="post" action="/login">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="username">Email</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="username" name="email" placeholder="12345678A" maxlength="70" required/>
+					<input type="text" class="form-control" id="username" name="username" maxlength="70" required/>
 				</div>
 			</div>
 			<div class="form-group">
