Se actualizan el nombre de los ficheros de html para autor

--- a/biblioteca-spring/src/main/resources/templates/autor/update.html
+++ b/biblioteca-spring/src/main/resources/templates/autor/update.html
@@ -18,10 +18,10 @@
             </div>
 
             <div class="mb-3">
-                <label for="fechaNacimiento" class="form-label">Fecha de Nacimiento:</label>
-                <input th:value="${authorBirthDate}" th:field="*{fechaNacimiento}" type="date" class="form-control" id="fechaNacimiento" name="fechaNacimiento" required>
+                <label for="fecha-nacimiento" class="form-label">Fecha de Nacimiento:</label>
+                <input th:field="*{fechaNacimiento}" type="date" class="form-control" id="fecha-nacimiento" name="fecha-nacimiento" required>
             </div>
-
+            
             <button type="submit" class="btn btn-primary">Guardar Autor</button>
         </form>
         <hr>
