--- a/biblioteca-spring/src/main/resources/templates/libro/list.html
+++ b/biblioteca-spring/src/main/resources/templates/libro/list.html
@@ -3,8 +3,8 @@
 	<head th:replace="fragments/head" />
 	<body>
 		<div class="container">
-			<h1>Autores</h1>
-			<a th:href="@{autor/add}" class="btn btn-primary btn-sm mb-3">Agregar autor</a>
+			<h1>Libros</h1>
+			<a th:href="@{autor/add}" class="btn btn-primary btn-sm mb-3">Agregar libro</a>
 			<table id="tableAuthors" class="table table-striped table-responsive-md">
 				<thead>
 					<tr>
