Se corrige un enrutamiento para actaualizar y eliminar

--- a/biblioteca-spring/src/main/resources/templates/autor/list.html
+++ b/biblioteca-spring/src/main/resources/templates/autor/list.html
@@ -20,8 +20,8 @@
 						<td th:text="${author.nacionalidad}"></td>
 						<td th:text="${author.fechaNacimiento}"></td>
 						<td>
-							<a th:href="@{autor/update/{id}(id=${author.id})}" class="btn btn-primary">Actualizar</a>
-							<a th:href="@{autor/delete/{id}(id=${author.id})}" class="btn btn-danger">Eliminar</a>
+							<a th:href="@{update/{id}(id=${author.id})}" class="btn btn-primary">Actualizar</a>
+							<a th:href="@{delete/{id}(id=${author.id})}" class="btn btn-danger">Eliminar</a>
 						</td>
 					</tr>
 				</tbody>
@@ -36,7 +36,6 @@
 			        ],
 				});
 			</script>
-			</div><!-- Cierra la el if -->
 		</div>
 	</body>
 </html>
