--- a/biblioteca-spring/src/main/resources/templates/fragments/footer.html
+++ b/biblioteca-spring/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<div class="container">
-		<span class="text-muted" sec:authorize="!isAuthenticated()">Biblioteca Capgemini</span>
+		<span class="text-muted">Biblioteca Capgemini</span>
 	</div>
 </footer>
