--- a/biblioteca-spring/src/main/resources/templates/admin/add.html
+++ b/biblioteca-spring/src/main/resources/templates/admin/add.html
@@ -4,7 +4,7 @@
 <head th:replace="fragments/head" />
 
 <body>
-	<!--<nav th:replace="fragments/nav" />-->
+	<nav th:replace="fragments/nav" />
 
 	<div class="container">
 		<h2>Agregar administrador</h2>
