--- a/biblioteca-spring/src/main/resources/templates/fragments/nav.html
+++ b/biblioteca-spring/src/main/resources/templates/fragments/nav.html
@@ -6,95 +6,71 @@
 				<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 					class="icon-bar"></span>
 			</button>
-			<img src="/img/student-48.png" alt="logo" />
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-				<li><a href="/" th:text="#{nav.home}"></a></li>
+				<li><a href="/">Home</a></li>
 
 				<!-- ADMIN -->
 				<li id="user-management-menu" class="dropdown" sec:authorize="hasAuthority('ADMIN')">
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-					<span th:text="#{nav.userManagement}"></span> 
+					<span>Gestión de usuarios</span> 
 					<span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/user/add" th:text="#{nav.userManagement.add}"></a>
-						</li>
-						<li><a href="/user/list"
-							th:text="#{nav.userManagement.users}"></a></li>
-						<li><a href="/user/listDisabled"
-							th:text="#{nav.userManagement.usersDisabled}"></a></li>
-						<li><a href="/user/import"
-							th:text="#{nav.userManagement.import}"></a></li>
+						<li><a href="/admin/add">Agregar administrador</a></li>
+						<li><a href="/lector/add">Agregar lector</a></li>
+						<li><a href="/admin/list">Ver administradores</a></li>
+						<li><a href="/lector/list">Ver lectores</a></li>
 					</ul>
 				</li>
 				<!-- ADMIN -->
-				<li id="tutorials-management-menu" class="dropdown" sec:authorize="hasAuthority('ADMIN')">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-						<span th:text="#{nav.tutorialManagement}"></span> 
-						<span class="caret"></span>
-					</a>
+				<li id="user-management-menu" class="dropdown" sec:authorize="hasAuthority('ADMIN')">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
+					<span>Gestión de libros</span> 
+					<span class="caret"></span>
+				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/tutorialGroups/automaticAssignment"
-							th:text="#{nav.tutorialManagement.automatic}"></a></li>
-						<li><a href="/tutorialGroups/manualAssignment"
-							th:text="#{nav.tutorialManagement.manual}"></a></li>
-						<li><a href="/tutorialGroups/reports"
-							th:text="#{nav.tutorialManagement.reports}"></a></li>
+						<li><a href="/autor/add">Agregar autor</a></li>
+						<li><a href="/autor/list">Ver autores</a></li>
+						<li><a href="/libro/add">Agregar libro</a></li>
+						<li><a href="/libro/list">Ver libros</a></li>
+						<li><a href="/copia/list">Ver copias</a></li>
 					</ul>
 				</li>
 
-				<!-- ADMIN -->
-				<li sec:authorize="hasAuthority('ADMIN')">
-					<a href="/system/defineSystemVariables" th:text="#{nav.systemVariables}"></a>
-				</li>
-
-				<!-- TUTOR - Gestión de estudiantes -->
-				<li id="student-management-menu" class="dropdown" sec:authorize="hasAuthority('TUTOR')">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-						<span th:text="#{nav.stManagement}"></span> 
-						<span class="caret"></span>
-					</a>
+				<!-- LECTOR -->
+				<li id="user-management-menu" class="dropdown" sec:authorize="hasAuthority('LECTOR')">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
+					<span>Catálogo</span> 
+					<span class="caret"></span>
+				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/tutor/defineMaxStudents"
-							th:text="#{nav.stManagement.defMaxSt}"></a></li>
-						<li><a href="/tutor/students"
-							th:text="#{nav.stManagement.students}"></a></li>
+						<li><a href="/libro/list">Ver libros</a></li>
+						<li><a href="/autor/list">Ver autores</a></li>
 					</ul>
 				</li>
-
-				<!-- ESTUDIANTE/TUTOR - Gestión de tutoría -->
-				<li id="tutorial-management-menu" class="dropdown" sec:authorize="hasAnyAuthority('ESTUDIANTE','TUTOR')">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-						<span th:text="#{nav.tutorialManagement}"></span> 
-						<span class="caret"></span>
-					</a>
+				<!-- LECTOR -->
+				<li id="user-management-menu" class="dropdown" sec:authorize="hasAuthority('LECTOR')">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
+					<span>Gestión de préstamos</span> 
+					<span class="caret"></span>
+				</a>
 					<ul class="dropdown-menu">
-						<li sec:authorize="hasAuthority('ESTUDIANTE')"><a
-							href="/student/tutorials"
-							th:text="#{nav.tutorialManagement.fixedTutorials}"></a></li>
-						<li sec:authorize="hasAuthority('ESTUDIANTE')"><a
-							href="/student/seeTutorProfile"
-							th:text="#{nav.tutorialManagement.seeTutor}"></a></li>
-						<li sec:authorize="hasAuthority('TUTOR')"><a
-							href="/tutor/callTutorial"
-							th:text="#{nav.tutorialManagement.callTut}"></a></li>
-						<li sec:authorize="hasAuthority('TUTOR')"><a
-							href="/tutor/tutorials"
-							th:text="#{nav.tutorialManagement.tutorials}"></a></li>
+						<li><a href="/copia/devolver">Devolución de préstamo</a></li>
+						<li><a href="/copia/solicitar">Solicitud de préstamo</a></li>
 					</ul>
 				</li>
-
-				<!-- ADMIN/TUTOR/ESTUDIANTE - Mi perfil -->
-				<li sec:authorize="hasAuthority('ADMIN')">
-					<a href="/admin/myProfile" th:text="#{nav.myProfile}"></a>
-				</li>
-				<li sec:authorize="hasAuthority('TUTOR')">
-					<a href="/tutor/myProfile" th:text="#{nav.myProfile}"></a>
-				</li>
-				<li sec:authorize="hasAuthority('ESTUDIANTE')">
-					<a href="/student/myProfile" th:text="#{nav.myProfile}"></a>
+				<!-- LECTOR -->
+				<li id="user-management-menu" class="dropdown" sec:authorize="hasAuthority('LECTOR')">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
+					<span>Mi estado</span> 
+					<span class="caret"></span>
+				</a>
+					<ul class="dropdown-menu">
+						<li><a href="/lector/copias">Libros prestados</a></li>
+						<li><a href="/lector/multas">Mis multas</a></li>
+					</ul>
 				</li>
 			</ul>
 
@@ -102,12 +78,12 @@
 				<li sec:authorize="!isAuthenticated()">
 					<a href="/login">
 						<span class="glyphicon glyphicon-log-in"></span> 
-						<span th:text="#{login.message}"></span>
+						<span>Login</span>
 					</a>
 				</li>
 				<li sec:authorize="isAuthenticated()">
 					<form sec:authorize="isAuthenticated()"	class="navbar-form navbar-right" action="/logout" method="post">
-						<input class="btn btn-default" type="submit" th:value="#{logout.message}"> 
+						<input class="btn btn-default" type="submit" value="Desconectar"> 
 						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 					</form>
 				</li>
