--- a/biblioteca-spring/src/main/resources/templates/libro/add.html
+++ b/biblioteca-spring/src/main/resources/templates/libro/add.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head th:replace="fragments/head" />
 <body>
+	<nav th:replace="fragments/nav" />
     <div class="container">
         <h1>Crear Libro</h1>
 		
@@ -31,5 +32,6 @@
         <hr>
         <a class="btn btn-outline-secondary">Volver</a>
     </div>
+    <footer th:replace="fragments/footer" />
 </body>
 </html>
