--- a/biblioteca-spring/src/main/resources/templates/user/home.html
+++ b/biblioteca-spring/src/main/resources/templates/user/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head th:replace="fragments/head" />
-
 <body>
-	<!--<nav th:replace="fragments/nav" />-->
-	<h1>PAGINA HOME</h1>
+	<nav th:replace="fragments/nav" />
+	<div class="container">
+		<h1>PAGINA HOME</h1>
+	</div>
 	<footer th:replace="fragments/footer" />
 </body>
 
