--- a/biblioteca-spring/src/main/resources/templates/user/login.html
+++ b/biblioteca-spring/src/main/resources/templates/user/login.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head th:replace="fragments/head" />
 <body>
-	<!--<nav th:replace="fragments/nav" />-->
+	<nav th:replace="fragments/nav" />
 	<div class="container">
 		<h2>Inicio de sesión</h2>
 		<form class="form-horizontal" method="post" action="/login">
