--- a/biblioteca-spring/src/main/resources/templates/libro/add.html
+++ b/biblioteca-spring/src/main/resources/templates/libro/add.html
@@ -18,12 +18,12 @@
 
             <div class="mb-3">
                 <label for="editorial" class="form-label">Editorial:</label>
-                <input th:field="*{editorial}" type="date" class="form-control" id="editorial" name="editorial" required>
+                <input th:field="*{editorial}" type="text" class="form-control" id="editorial" name="editorial" required>
             </div>
             
             <div class="mb-3">
                 <label for="year" class="form-label">Año:</label>
-                <input th:field="*{anyo}" type="date" class="form-control" id="year" name="year" required>
+                <input th:field="*{anyo}" type="number" class="form-control" id="year" name="year" required>
             </div>
 
             <button type="submit" class="btn btn-primary">Guardar Autor</button>
@@ -31,5 +31,6 @@
         <hr>
         <a class="btn btn-outline-secondary">Volver</a>
     </div>
+    <footer th:replace="fragments/footer" />
 </body>
 </html>
