--- a/biblioteca-spring/src/main/resources/templates/libro/list.html
+++ b/biblioteca-spring/src/main/resources/templates/libro/list.html
@@ -4,8 +4,8 @@
 	<body>
 		<div class="container">
 			<h1>Libros</h1>
-			<a th:href="@{autor/add}" class="btn btn-primary btn-sm mb-3">Agregar libro</a>
-			<table id="tableAuthors" class="table table-striped table-responsive-md">
+			<a th:href="@{libro/add}" class="btn btn-primary btn-sm mb-3">Agregar libro</a>
+			<table id="tableBooks" class="table table-striped table-responsive-md">
 				<thead>
 					<tr>
 						<th><a>Titulo</a></th>
@@ -22,14 +22,14 @@
 						<td th:text="${book.editorial}"></td>
 						<td th:text="${book.anyo}"></td>
 						<td>
-							<a th:href="@{autor/update/{id}(id=${book.id})}" class="btn btn-primary">Actualizar</a>
-							<a th:href="@{autor/delete/{id}(id=${book.id})}" class="btn btn-danger">Eliminar</a>
+							<a th:href="@{update/{id}(id=${book.id})}" class="btn btn-primary">Actualizar</a>
+							<a th:href="@{delete/{id}(id=${book.id})}" class="btn btn-danger">Eliminar</a>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 			<script>
-			    $('#tableAuthors').DataTable({
+			    $('#tableBooks').DataTable({
 					"columns": [
 			            null, // Columna Titulo
 			            null, // Columna Tipo 
@@ -39,7 +39,7 @@
 			        ],
 				});
 			</script>
-			</div><!-- Cierra la el if -->
 		</div>
 	</body>
+	<footer th:replace="fragments/footer" />
 </html>
