--- a/biblioteca-spring/src/main/resources/templates/admin/list.html
+++ b/biblioteca-spring/src/main/resources/templates/admin/list.html
@@ -29,9 +29,13 @@
 								th:href="${'/admin/details/' + admin.id}">Detalles</a></td>
 						<td th:unless="${admin.equals(activeUser)}"><a
 								th:href="${'/admin/update/' + admin.id}">Actualizar</a></td>
-						<td th:unless="${admin.equals(activeUser)}"><a
-								th:href="${'/admin/delete/' + admin.id}">Eliminar</a></td>
-
+						<td th:unless="${admin.equals(activeUser)}">
+							<form th:action="${'/admin/delete/' + admin.id}" method="post">
+								<input type="submit" class="button-danger-action" value="Eliminar"
+									onclick="return confirm('¿Está seguro de que quiere eliminar al admin?')"/>
+								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+							</form>
+						</td>
 						<!-- Para que la tabla DataTables funcione (la tabla tiene que tener siempre las mismas columnas) -->
 						<td th:if="${admin.equals(activeUser)}"></td>
 						<td th:if="${admin.equals(activeUser)}"></td>
