--- a/biblioteca-spring/src/main/resources/templates/libro/list.html
+++ b/biblioteca-spring/src/main/resources/templates/libro/list.html
@@ -1,46 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head th:replace="fragments/head" />
-	<body>
-		<nav th:replace="fragments/nav" />
-		<div class="container">
-			<h1>Libros</h1>
-			<a th:href="@{libro/add}" class="btn btn-primary btn-sm mb-3">Agregar libro</a>
-			<table id="tableBooks" class="table table-striped table-responsive-md">
-				<thead>
-					<tr>
-						<th><a>Titulo</a></th>
-						<th><a>Tipo</a></th>
-						<th><a>editorial</a></th>
-						<th><a>año</a></th>
-						<th>Acciones</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="book: ${listBooks}">
-						<td th:text="${book.titulo}"></td>
-						<td th:text="${book.tipo}"></td>
-						<td th:text="${book.editorial}"></td>
-						<td th:text="${book.anyo}"></td>
-						<td>
-							<a th:href="@{update/{id}(id=${book.id})}" class="btn btn-primary">Actualizar</a>
-							<a th:href="@{delete/{id}(id=${book.id})}" class="btn btn-danger">Eliminar</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<script>
-			    $('#tableBooks').DataTable({
-					"columns": [
-			            null, // Columna Titulo
-			            null, // Columna Tipo 
-			            null, // Columna Editorial
-			            null, // Columna Año
-			            { "orderable": false, "searchable": false}, // Acciones
-			        ],
-				});
-			</script>
-		</div>
-	</body>
-	<footer th:replace="fragments/footer" />
+
+<head th:replace="fragments/head" />
+
+<body>
+	<nav th:replace="fragments/nav" />
+	<div class="container">
+		<h1>Libros</h1>
+		<!--<a th:href="@{/libro/add}" class="btn btn-primary btn-sm mb-3">Agregar libro</a>-->
+		<table id="tableBooks" class="table table-striped table-responsive-md">
+			<thead>
+				<tr>
+					<th>Titulo</th>
+					<th>Tipo</th>
+					<th>Editorial</th>
+					<th>Año</th>
+					<th class="col-md-1"></th>
+					<th class="col-md-1"></th>
+					<th class="col-md-1"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="book: ${listBooks}">
+					<td th:text="${book.titulo}"></td>
+					<td th:text="${book.tipoLibro}"></td>
+					<td th:text="${book.editorial}"></td>
+					<td th:text="${book.anyo}"></td>
+					<td>
+						<a th:href="@{update/{id}(id=${book.id})}">Actualizar</a>
+					</td>
+					<td>
+						<form th:action="${'/libro/delete/' + book.id}" method="post">
+							<input type="submit" class="btn-link" value="Eliminar"
+								onclick="return confirm('¿Está seguro de que quiere eliminar el libro?')" />
+							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+						</form>
+					</td>
+					<!--					<td>-->
+					<!--						<a onclick="return confirm('¿Está seguro de que quiere eliminar al lector?')" th:href="@{delete/{id}(id=${book.id})}">Eliminar</a>						-->
+					<!--					</td>-->
+					<td>
+						<a>Agregar copia</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<script>
+			$('#tableBooks').DataTable({
+				"columns": [
+					null, // Columna Titulo
+					null, // Columna Tipo 
+					null, // Columna Editorial
+					null, // Columna Año
+					{"orderable": false, "searchable": false}, // Acciones
+					{"orderable": false, "searchable": false}, // Acciones
+					{"orderable": false, "searchable": false}, // Acciones
+				],
+			});
+		</script>
+	</div>
+</body>
+<footer th:replace="fragments/footer" />
+
 </html>
