--- a/biblioteca-spring/src/main/resources/templates/autor/add.html
+++ b/biblioteca-spring/src/main/resources/templates/autor/add.html
@@ -23,6 +23,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Guardar Autor</button>
+        	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         </form>
         <hr>
         <a class="btn btn-outline-secondary">Volver</a>
