Eliminado agregar lectores ; Se puede poner rol en /user/add

--- a/biblioteca-spring/src/main/resources/templates/fragments/nav.html
+++ b/biblioteca-spring/src/main/resources/templates/fragments/nav.html
@@ -18,9 +18,8 @@
 					<span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/admin/add">Agregar administrador</a></li>
-						<li><a href="/lector/add">Agregar lector</a></li>
-						<li><a href="/admin/list">Ver administradores</a></li>
+						<li><a href="/user/add">Agregar usuario</a></li>
+						<li><a href="/user/list">Ver usuarios</a></li>
 						<li><a href="/lector/list">Ver lectores</a></li>
 					</ul>
 				</li>
