--- a/biblioteca-spring/src/main/resources/templates/lector/add.html
+++ b/biblioteca-spring/src/main/resources/templates/lector/add.html
@@ -7,25 +7,31 @@
 	<nav th:replace="fragments/nav" />
 
 	<div class="container">
-		<h2>Agregar administrador</h2>
-		<form class="form-horizontal" method="post" action="/admin/add" th:object="${user}">
+		<h2>Agregar lector</h2>
+		<form class="form-horizontal" method="post" action="/lector/add" th:object="${lector}">
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="email">Email</label>
+				<label class="control-label col-sm-2" for="nombre">Nombre</label>
 				<div class="col-sm-10">
-					<input type="email" class="form-control" id="email" name="email" placeholder="manolito@gmail.com"
-						maxlength="255" required />
-					<span class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
+					<input type="text" class="form-control" id="nombre" name="nombre" maxlength="25g5" required />
+					<span class="text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-2" for="password">Password</label>
+				<label class="control-label col-sm-2" for="telefono">Teléfono</label>
 				<div class="col-sm-10">
-					<input type="password" class="form-control" id="password" name="password" maxlength="255"
+					<input type="text" class="form-control" id="telefono" name="telefono" maxlength="255"
 						required />
-					<span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+					<span class="text-danger" th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}">
 				</div>
 			</div>
-			<input type="hidden" name="role" value="ADMIN"/>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="direccion">Dirección</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="direccion" name="direccion" maxlength="255"
+						required />
+					<span class="text-danger" th:if="${#fields.hasErrors('direccion')}" th:errors="*{direccion}">
+				</div>
+			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
 					<button type="submit" class="btn btn-primary">Aceptar</button>
