--- a/biblioteca-spring/src/main/resources/templates/user/add.html
+++ b/biblioteca-spring/src/main/resources/templates/user/add.html
@@ -7,7 +7,7 @@
 	<nav th:replace="fragments/nav" />
 
 	<div class="container">
-		<h2>Agregar administrador</h2>
+		<h2>Agregar usuario</h2>
 		<form class="form-horizontal" method="post" action="/admin/add" th:object="${user}">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="email">Email</label>
@@ -25,7 +25,14 @@
 					<span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
 				</div>
 			</div>
-			<input type="hidden" name="role" value="ADMIN"/>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="role">Rol</label>
+				<div class="col-sm-10">
+					<select id="role" class="form-control" name="role">
+						<option th:each="role : ${rolesList}" th:value="${role}" th:text="${role}"></option>
+					</select>
+				</div>
+			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
 					<button type="submit" class="btn btn-primary">Aceptar</button>
