--- a/biblioteca-spring/src/main/resources/templates/autor/list.html
+++ b/biblioteca-spring/src/main/resources/templates/autor/list.html
@@ -28,8 +28,15 @@
 						<a th:href="@{update/{id}(id=${author.id})}">Actualizar</a>
 					</td>
 					<td>
-						<a th:href="@{delete/{id}(id=${author.id})}">Eliminar</a>						
+						<form th:action="${'/autor/delete/' + author.id}" method="post">
+							<input type="submit" class="btn-link" value="Eliminar"
+								onclick="return confirm('¿Está seguro de que quiere eliminar al autor?')" />
+							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+						</form>
 					</td>
+<!--					<td>-->
+<!--						<a th:href="@{delete/{id}(id=${author.id})}">Eliminar</a>						-->
+<!--					</td>-->
 					<td>
 						<a th:href="@{/libro/add/{id}(id=${author.id})}">Agreagar libro</a>						
 					</td>
