--- a/biblioteca-spring/src/main/resources/templates/user/add.html
+++ b/biblioteca-spring/src/main/resources/templates/user/add.html
@@ -8,7 +8,7 @@
 
 	<div class="container">
 		<h2>Agregar usuario</h2>
-		<form class="form-horizontal" method="post" action="/admin/add" th:object="${user}">
+		<form class="form-horizontal" method="post" action="/user/add" th:object="${user}">
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="email">Email</label>
 				<div class="col-sm-10">
