--- a/biblioteca-spring/src/main/resources/templates/user/list.html
+++ b/biblioteca-spring/src/main/resources/templates/user/list.html
@@ -7,6 +7,7 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container">
 		<h2>Ver usuarios</h2>
+		<div class="alert alert-success" role="alert" th:if="${userDeleted}">Usuario eliminado con éxito</div>
 		<p>A continuación, se muestran los usuarios del sistema:</p>
 		<div th:if="${users.isEmpty()}" class="alert alert-info" role="alert">No existen usuarios en el sistema
 		</div>
@@ -19,7 +20,6 @@
 						<td>Rol</td>
 						<th class="col-md-1"></th>
 						<th class="col-md-1"></th>
-						<th class="col-md-1"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -28,18 +28,15 @@
 						<td th:text="${user.email}"></td>
 						<td th:text="${user.role}"></td>
 						<td th:unless="${user.equals(activeUser)}"><a
-								th:href="${'/admin/details/' + user.id}">Detalles</a></td>
-						<td th:unless="${user.equals(activeUser)}"><a
-								th:href="${'/admin/update/' + user.id}">Actualizar</a></td>
+								th:href="${'/user/details/' + user.id}">Detalles</a></td>
 						<td th:unless="${user.equals(activeUser)}">
-							<form th:action="${'/admin/delete/' + user.id}" method="post">
+							<form th:action="${'/user/delete/' + user.id}" method="post">
 								<input type="submit" class="button-danger-action" value="Eliminar"
-									onclick="return confirm('¿Está seguro de que quiere eliminar al admin?')"/>
+									onclick="return confirm('¿Está seguro de que quiere eliminar al usuario?')"/>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 							</form>
 						</td>
 						<!-- Para que la tabla DataTables funcione (la tabla tiene que tener siempre las mismas columnas) -->
-						<td th:if="${user.equals(activeUser)}"></td>
 						<td th:if="${user.equals(activeUser)}"></td>
 						<td th:if="${user.equals(activeUser)}"></td>
 					</tr>
@@ -51,7 +48,6 @@
 						null, // Columna ID
 						null, // Columna Email
 						null, // Columna Rol
-						{"orderable": false, "searchable": false}, // Enlace
 						{"orderable": false, "searchable": false}, // Enlace
 						{"orderable": false, "searchable": false}, // Enlace
 					]
