--- a/biblioteca-spring/src/main/resources/templates/copia/list.html
+++ b/biblioteca-spring/src/main/resources/templates/copia/list.html
@@ -6,7 +6,7 @@
 <body>
 	<nav th:replace="fragments/nav" />
 	<div class="container">
-		<h1>Libros</h1>
+		<h1>Copias</h1>
 		<!--<a th:href="@{/libro/add}" class="btn btn-primary btn-sm mb-3">Agregar libro</a>-->
 		<table id="tableCopies" class="table table-striped table-responsive-md">
 			<thead>
