Implementada solicitud de prestamo por isbn

--- a/biblioteca-spring/src/main/resources/templates/fragments/nav.html
+++ b/biblioteca-spring/src/main/resources/templates/fragments/nav.html
@@ -55,8 +55,8 @@
 					<span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/copia/devolver">Devolución de préstamo</a></li>
-						<li><a href="/copia/solicitar">Solicitud de préstamo</a></li>
+						<li><a href="/prestamo/devolver">Devolución de préstamo</a></li>
+						<li><a href="/prestamo/solicitar">Solicitud de préstamo</a></li>
 					</ul>
 				</li>
 				<!-- LECTOR -->
@@ -66,7 +66,7 @@
 					<span class="caret"></span>
 				</a>
 					<ul class="dropdown-menu">
-						<li><a href="/lector/copias">Libros prestados</a></li>
+						<li><a href="/lector/prestamos">Libros prestados</a></li>
 						<li><a href="/lector/multas">Mis multas</a></li>
 					</ul>
 				</li>
