--- a/biblioteca-spring/src/main/resources/templates/copia/solicitar.html
+++ b/biblioteca-spring/src/main/resources/templates/copia/solicitar.html
@@ -7,11 +7,12 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container">
 		<h2>Solicitud de préstamo</h2>
-		<form class="form-horizontal" method="post" action="/copia/solicitar">
+		<form class="form-horizontal" method="post" action="/prestamo/solicitar">
 			<div class="form-group">
-				<label for="isbn" class="control-label col-sm-2">ISBN</label>
+				<label for="isbn" class="control-label col-sm-2">ISBN o título</label>
 				<div class="col-sm-10">
-					<input type="text" id="isbn" name="isbn" maxlength="255" required>
+					<input type="text" id="isbnTitulo" name="isbnTitulo" placeholder="Introduzca ISBN o título"
+						maxlength="255" required>
 				</div>
 			</div>
 			<div class="form-group">
