--- a/biblioteca-spring/src/main/resources/templates/user/list.html
+++ b/biblioteca-spring/src/main/resources/templates/user/list.html
@@ -32,7 +32,7 @@
 								th:href="${'/user/details/' + user.id}">Detalles</a></td>
 						<td th:unless="${user.equals(activeUser)}">
 							<form th:action="${'/user/delete/' + user.id}" method="post">
-								<input type="submit" class="button-danger-action" value="Eliminar"
+								<input type="submit" class="btn-link" value="Eliminar"
 									onclick="return confirm('¿Está seguro de que quiere eliminar al usuario?')"/>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 							</form>
