En user/list, en enlace a detalles varia dependiendo del rol

--- a/biblioteca-spring/src/main/resources/templates/user/details.html
+++ b/biblioteca-spring/src/main/resources/templates/user/details.html
@@ -7,7 +7,7 @@
 	<nav th:replace="fragments/nav" />
 
 	<div class="container">
-		<h2>Detalles de usuario</h2>
+		<h2>Detalles de administrador</h2>
 			<div class="panel panel-default">
 				<div class="panel-heading">ID</div>
 				<div class="panel-body" th:text="${user.id}"></div>
