--- a/biblioteca-spring/src/main/resources/templates/prestamo/list.html
+++ b/biblioteca-spring/src/main/resources/templates/prestamo/list.html
@@ -8,9 +8,11 @@
 	<div class="container">
 		<h2>Ver préstamos</h2>
 		<p>A continuación, se muestran sus libros prestados:</p>
-		<div th:if="${prestamosLector.isEmpty()}" class="alert alert-info" role="alert">No tiene libros prestados
-		</div>
 		<div class="alert alert-success" role="alert" th:if="${prestamoRealizado}">Préstamo realizado con éxito
+		</div>
+		<div class="alert alert-success" role="alert" th:if="${prestamoDevuelto}">Préstamo devuelto con éxito
+		</div>
+		<div th:if="${prestamosLector.isEmpty()}" class="alert alert-info" role="alert">No tiene libros prestados
 		</div>
 		<div th:unless="${prestamosLector.isEmpty()}" class="table-responsive">
 			<table class="table table-hover" id="tablePrestamosLector">
@@ -36,7 +38,13 @@
 						<td th:text="${prestamo.getFechaExp()}"></td>
 
 						<td><a th:href="${'/libro/details/' + prestamo.copia.libro.id}">Detalles</a></td>
-						<td><a th:href="${'/libro/devolver/' + prestamo.copia.libro.id}">¿Devolver?</a></td>
+						<td>
+							<form th:action="${'/prestamo/devolver/' + prestamo.id}" method="post">
+								<input type="submit" class="btn-link" value="Devolver"
+									onclick="return confirm('¿Está seguro de que quiere devolver el libro?')" />
+								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+							</form>
+						</td>
 					</tr>
 				</tbody>
 			</table>
