Implementada página de /home

--- a/biblioteca-spring/src/main/resources/templates/user/home.html
+++ b/biblioteca-spring/src/main/resources/templates/user/home.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head th:replace="fragments/head" />
+
 <body>
 	<nav th:replace="fragments/nav" />
 	<div class="container">
-		<h1>PAGINA HOME</h1>
+		<h1>Bienvenido/a</h1>
+		<p>¡Bienvenido a nuestra biblioteca en línea! Sumérgete en un mundo de lecturas desde tu dispositivo.
+			¡Comencemos a explorar juntos!</p>
 	</div>
 	<footer th:replace="fragments/footer" />
 </body>
