--- a/biblioteca-spring/src/main/resources/templates/user/list.html
+++ b/biblioteca-spring/src/main/resources/templates/user/list.html
@@ -7,7 +7,9 @@
 	<nav th:replace="fragments/nav" />
 	<div class="container">
 		<h2>Ver usuarios</h2>
-		<div class="alert alert-success" role="alert" th:if="${userDeleted}">Usuario eliminado con éxito</div>
+		<div class="alert alert-danger" role="alert" th:if="${errorDisabling}">No se puede desactivar un usuario con
+			préstamos activos</div>
+		<div class="alert alert-success" role="alert" th:if="${userDisabled}">Usuario desactivado con éxito</div>
 		<div class="alert alert-success" role="alert" th:if="${userAdded}">Usuario creado con éxito</div>
 		<p>A continuación, se muestran los usuarios del sistema:</p>
 		<div th:if="${users.isEmpty()}" class="alert alert-info" role="alert">No existen usuarios en el sistema
@@ -37,9 +39,9 @@
 							</div>
 						</td>
 						<td th:unless="${user.equals(activeUser)}">
-							<form th:action="${'/user/delete/' + user.id}" method="post">
+							<form th:action="${'/user/disable/' + user.id}" method="post">
 								<input type="submit" class="btn-link" value="Eliminar"
-									onclick="return confirm('¿Está seguro de que quiere eliminar al usuario?')"/>
+									onclick="return confirm('¿Está seguro de que quiere desactivar al usuario?')" />
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 							</form>
 						</td>
