--- a/biblioteca-spring/src/main/resources/templates/fragments/nav.html
+++ b/biblioteca-spring/src/main/resources/templates/fragments/nav.html
@@ -20,6 +20,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="/user/add">Agregar usuario</a></li>
 						<li><a href="/user/list">Ver usuarios</a></li>
+						<li><a href="/user/listDisabled">Ver usuarios desactivados</a></li>
 						<li><a href="/lector/list">Ver lectores</a></li>
 					</ul>
 				</li>
